# cpp-cv-cmake-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
src/: main.cpp  utils.cpp
test/: CMakeLists.txt  utils_test.cpp
